# transcribe-node

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  catalog.py  config.py  engine.py  formatting.py  hardware.py  main.py  pyproject.toml  start.bat  start.sh
.github/workflows/: ci.yml
.prompts/: README.md
docs/: ROADMAP.md  git-strategy.md
docs/adr/: 0001-record-architecture-decisions.md  0002-windows-cuda-dll-registration.md  0003-cuda-as-optional-extra.md  0004-configuration-resolution-order.md  0005-ui-panel-lifecycle-and-transcribe-zone.md  0006-download-progress-console-logging.md
docs/architecture/: api.md  overview.md
static/: index.html
tests/: stubs.py  test_api.py  test_catalog.py  test_config.py  test_engine.py  test_formatting.py
